# empty_rosnode_python

./: CMakeLists.txt  package.xml  setup.py
launch/: empty_rosnode_python.launch
python/empty_rosnode_python/: empty_rosnode_python.py  some_tests.py
