<?xml version="1.0"?>
<package>
  <name>empty_rosnode_python</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `localization` in `package.xml`.</description>

  <author email="teddy@todo.todo">teddy</author>
  <maintainer email="nico@nico.com">Nico</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <test_depend>gtest</test_depend>
</package>
